
### Bug Fixes:
- Sync Fix to support top-level folder
- setPathStyleAccess fix

### Improvements:
- Faster Syncing, Bucket Migrations, and Snapshots - 5 files at a time with metadata checks.
- Cleaner and shared code between CLI and GUI
- Uses the new ListObjectsV2Request from the S3 JDK
- Region is no longer required in configuration.
- CLI does not check for updates for each command anymore.

### New Features:
- Abort multi-part uploads
- Migrate Buckets with CLI
- Snapshot Buckets with CLI
- Snapshot deltas with CLI 

Features:

1. Tier buckets to and from Amazon Glacier.
2. Sync files to and from S3 storage.
3. Stream music.
4. Text editor.
5. Modify Bucket and Object ACL's.
6. Take screen shots and upload them to your bucket.
7. Bucket versioning and life cycles.
8. Graphical and console based background syncing.
9. Store multiple Amazon S3 accounts.
10. Image viewer.
11. Migrate buckets between S3 accounts.
12. Bucket search.
13. Performance testing with graphs.
14. Command-line interface.
15. IRC client that allows you to save chat sessions to S3.
16. Access shared buckets on the same S3 provider.
17. Share buckets with the Canonical ID of a user on the same S3 provider.
18. Graph CSV files and save them to a bucket.
19. Record audio messages and save them to a bucket.
20. Bucket snapshots.

Command-line Options:

java -jar CloudExplorer.jar put filename bucket
java -jar CloudExplorer.jar get filename bucket destination
java -jar CloudExplorer.jar delete filename bucket

#List bucket contents
java -jar CloudExplorer.jar ls bucket

#List buckets
java -jar CloudExplorer.jar listbuckets

#Delete a bucket
java -jar CloudExplorer.jar rmbucket bucket

#Create a bucket
java -jar CloudExplorer.jar makebucket bucket

#Sync to S3
java -jar CloudExplorer.jar synctos3 location bucket [folder]

#Sync from S3
java -jar CloudExplorer.jar syncfroms3 destination bucket [folder]

#Performance Test - PUT
java -jar CloudExplorer.jar uploadtest bucket size threads operations
